--- a/public/plugins/react/view/admin_react/prop.html
+++ b/public/plugins/react/view/admin_react/prop.html
@@ -48,6 +48,17 @@
                 </form-item>
                 <form-item label="默认数值">
                     <i-input v-model="formItem.values" name="values" placeholder="默认为空"></i-input>
+                    <p>多个值用逗号隔开，如：金斑蝶,爪哇犀牛,印度黑羚;<br>
+                        开关默认值：false
+                    </p>
+                </form-item>
+                <form-item label="数据源">
+                    <i-input v-model="formItem.source" name="source" type="textarea" :rows="4"></i-input>
+                    <p>用于下拉框选择器</p>
+                </form-item>
+                <form-item label="附加事件">
+                    <i-input v-model="formItem.eventname" name="eventname" placeholder="默认为空"></i-input>
+                    <p>一般不用。用于选择时触发，如：开关</p>
                 </form-item>
                 <form-item label="是否显示">
                     <i-input v-model="formItem.istable" name="istable" placeholder="默认为空" :value="1"></i-input>
@@ -108,7 +119,9 @@
                 valtype: '0',
                 values: '',
                 istable:'1',
-                width:'',              
+                width:'',
+                eventname:'', 
+                source:'',       
             },
             columns7: [
                 {
@@ -192,7 +205,9 @@
                             valtype: String(item.valtype),
                             values: item.values,
                             istable:item.istable,
-                            width:item.width,              
+                            width:item.width, 
+                            eventname:item.eventname,
+                            source:item.source,          
                         }
                     }                    
                 })
@@ -209,7 +224,9 @@
                     valtype: '0',
                     values: '',
                     istable:'1',
-                    width:''            
+                    width:'',
+                    eventname:'',
+                    source:'',        
                 }
             },
             edit:function(rid){
@@ -246,6 +263,8 @@
                         values: s.formItem.values,
                         istable: s.formItem.istable,
                         width: s.formItem.width,
+                        eventname:s.formItem.eventname,
+                        source:s.formItem.source,
                     }
                 }).then(function(resp){
                     console.log(resp.data);
@@ -305,6 +324,8 @@
                         values: s.formItem.values,
                         istable: s.formItem.istable,
                         width: s.formItem.width,
+                        eventname:s.formItem.eventname,
+                        source:s.formItem.source,
                     }
                 }).then(function(resp){
                     console.log(resp.data);
